--- a/Aula1/Resolucao-sp.html
+++ b/Aula1/Resolucao-sp.html
@@ -13,5 +13,6 @@
 <body>
     <h1>One Piece</h1>
     <img src="img/Onepiece.jpeg" alt="One piece" width="30%" height="30%">
+    <!--OU <img src="img/Onepiece.jpeg" alt="One piece" width="320px" height="240px"> -->
 </body>
 </html>
