--- a/Prog Web/Aula1/Simbolos.html
+++ b/Prog Web/Aula1/Simbolos.html
@@ -11,5 +11,7 @@
     &reg;
     <!-- Links -->
      <p>Vamos ver as principais notícias do dia em: <a href="https://noticias.uol.com.br" target="_blank">UOL</a></p>
+
+     <!-- &shy - coloca hífen nas palavras que não couberam na mesma linha para continuação da palavra; -->
 </body>
 </html>
